--- a/frontend/style.css
+++ b/frontend/style.css
@@ -25,8 +25,9 @@ body {
 }
 
 h1 {
-    margin: 0 0 12px;
-    font-size: 20px
+    display: inline-block;
+    margin: 0 10px 12px 0;
+    font-size: 20px;
 }
 
 .controls {
