--- a/frontend/style.css
+++ b/frontend/style.css
@@ -19,22 +19,35 @@ body {
     color: #111
 }
 
+span {
+    font-style: italic;
+    font-size: 12px
+}
+
+h1 {
+    /* display: inline-block; */
+    margin: 0 18px 12px 0;
+    font-size: 20px;
+}
+
+.subtitle {
+    font-size: 12px;
+    font-style: italic;
+    font-weight: normal;
+    white-space: nowrap;
+}
+
 .container {
     margin: 20px auto;
     padding: 20px
 }
 
-h1 {
-    display: inline-block;
-    margin: 0 10px 12px 0;
+h2 {
+    /* display: inline-block; */
+    margin: 0 10px 8px 0;
     font-size: 20px;
 }
 
-h2 {
-    display: inline-block;
-    margin: 0 10px 12px 0;
-    font-size: 20px;
-}
 .controls {
     background: var(--card);
     padding: 12px;
@@ -165,8 +178,12 @@ a.link {
 }
 
 #calendar {
-    min-height: 450px;
+    /* min-height: 450px; */
     aspect-ratio: 1 / 1
+}
+
+.fc .fc-button {
+    font-size: 16px !important;
 }
 
 #resultsCount {
@@ -174,12 +191,33 @@ a.link {
     color: var(--muted)
 }
 
-@media (max-width:900px) {
+@media (max-width:1070px) {
     .layout {
         flex-direction: column
     }
 
+    .results {
+        max-width: 900;
+    }
+
+    .left {
+        width: 100%;
+    }
+
     .right {
-        width: 100%
+        width: 100%;
+        height: calc(100vw - 40px);
+    }
+
+    .fc-toolbar-title {
+        font-size: 14px !important;
+        /* default is ~22px */
+    }
+
+    .fc .fc-button {
+        padding: 2px 6px !important;
+        /* smaller buttons */
+        font-size: 12px !important;
+        border-radius: 4px !important;
     }
 }
